src/test/deca/context/valid/decl_list_fields.deca
// Description:
//    Test d'une déclaration d'une liste de champs
//
// Résultats:
//    OK
//
// Historique:
//    créé le 19/01/2017


class A {
  int x;
  int y = 0;
}
